apply plugin: 'com.android.application'
apply plugin: 'org.jetbrains.kotlin.plugin.compose'

android {
    def version = project.getProperties().get("version")
    if (version == null || "unspecified".equalsIgnoreCase(version)) {
        // 默认版本号；正式发布时由 CI 通过 -Pversion=<tag> 覆盖
        version = "1.0.0"
    }
    project.ext.appVersion = version
    def gitCommitHash = "unknown"
    def gitBranchName = "unknown"
    def gitCommitCount = 1
    try {
        gitCommitHash = 'git rev-parse --short HEAD'.execute().text.trim()
        gitBranchName = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
        gitCommitCount = "git rev-list --count HEAD".execute().text.trim().toInteger()
    } catch (Exception ignored) { }
    def buildTime = new Date().format("yyyy-MM-dd HH:mm:ss", TimeZone.getTimeZone("Asia/Shanghai"))

    compileSdk 37
    namespace 'io.github.aw1y2z.sesame'
    defaultConfig {
        applicationId "io.github.aw1y2z.sesame"
        minSdk 26
        //noinspection ExpiredTargetSdkVersion
        targetSdk 34
        versionCode gitCommitCount
        versionName version

        buildConfigField "String", "GIT_COMMIT_HASH", "\"${gitCommitHash}\""
        buildConfigField "String", "GIT_BRANCH_NAME", "\"${gitBranchName}\""
        buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""
    }
    buildFeatures {
        buildConfig = true // 显式启用 BuildConfig
        compose = true
    }
    ext {
        applicationName = "Sesame-M"
        applicationType = "Normal"
    }
    flavorDimensions.add("default")
    productFlavors {
        normal {
            dimension "default"
            ext.applicationType = "Normal"
        }
    }
    def keystorePropertiesFile = rootProject.file("keystore.properties")
    def keystoreProperties = new Properties()
    def hasKeystoreConfig = keystorePropertiesFile.exists()
    if (hasKeystoreConfig) {
        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
    }
    // 签名密钥/口令不进 Git；keystore.properties 与其引用的 .jks 均在 .gitignore 中。
    // 未提供 keystore.properties 时（例如 CI 未注入或贡献者本地未配置）跳过 release 签名配置，
    // 构建仍可完成，只是产物未签名。详见 doc/MyFix.md 的签名同步记录。
    if (hasKeystoreConfig) {
        signingConfigs {
            release {
                storeFile rootProject.file(keystoreProperties['storeFile'])
                storePassword keystoreProperties['storePassword']
                keyAlias keystoreProperties['keyAlias']
                keyPassword keystoreProperties['keyPassword']
                v1SigningEnabled true
                v2SigningEnabled true
            }
        }
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            if (hasKeystoreConfig) {
                signingConfig signingConfigs.release
            }
        }
    }
    // 按 ABI 拆分 APK：只发布 arm64-v8a，不再产出 armeabi-v7a 和 universal 兜底包
    splits {
        abi {
            enable true
            reset()
            include "arm64-v8a"
            universalApk false
        }
    }
    packaging {
        resources {
            merges += "META-INF/xposed/**"
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

androidComponents {
    onVariants(selector().withBuildType('release')) { variant ->
        variant.outputs.forEach { output ->
            // 按 ABI 区分产物名：arm64-v8a / armeabi-v7a；无 ABI filter 的为 universal 兜底包
            String abiTag = "-universal"
            output.getFilters().forEach { f ->
                if (f.getFilterType().name() == 'ABI') {
                    abiTag = "-" + f.getIdentifier()
                }
            }
            output.outputFileName.set("Sesame-M-Normal${abiTag}-${project.appVersion}.apk")
        }
    }
}

// Release 打包成功后，把本次产出的全部 APK（ABI 拆分包 + universal 兜底包）
// 按北京时间归档到项目根目录 APK/Release，参考 Sure-Xu 的 assembleLegacyRelease 归档任务，
// 因为有 ABI 拆分这里改成整个输出目录一起拷贝而不是单个固定文件名。详见 doc/MyFix.md。
tasks.matching { it.name == 'assembleNormalRelease' }.configureEach {
    def outputDir = layout.buildDirectory.dir("outputs/apk/normal/release")
    def archiveDir = rootProject.layout.projectDirectory.dir('APK/Release').asFile.toPath()
    doLast {
        def timestamp = new Date().format('yyyyMMdd_HHmmss', TimeZone.getTimeZone('Asia/Shanghai'))
        java.nio.file.Files.createDirectories(archiveDir)
        outputDir.get().asFile.listFiles({ File f -> f.name.endsWith('.apk') } as FileFilter)?.each { apk ->
            def baseName = apk.name[0..-5] // 去掉 ".apk" 后缀
            def archivedApk = archiveDir.resolve("${baseName}_${timestamp}.apk")
            java.nio.file.Files.copy(apk.toPath(), archivedApk, java.nio.file.StandardCopyOption.REPLACE_EXISTING)
            logger.lifecycle("Release APK 已归档: ${archivedApk}")
        }
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.0'
    compileOnly 'io.github.libxposed:api:102.0.0'
    implementation 'io.github.libxposed:service:102.0.0'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
    implementation 'com.elvishew:xlog:1.11.0'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.18.2'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.2'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.18.2'

    // NanoHTTPD 核心依赖（最新稳定版）
    implementation 'org.nanohttpd:nanohttpd:2.3.1'

    // Kotlin + Compose（miuix UI 重构基础）
    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.4.0"
    implementation "androidx.activity:activity-compose:1.9.3"
    implementation "top.yukonga.miuix.kmp:miuix-ui:0.9.3"
    implementation "top.yukonga.miuix.kmp:miuix-preference:0.9.3"
    implementation "androidx.compose.material:material-icons-extended:1.7.6"
}
